<resources>
    <string name="app_name">AND_FoodProject</string>
    <string name="email">Email...</string>
    <string name="password">Password</string>
    <string name="log_in">Log-in</string>
    <string name="search">Search...</string>
    <string name="category_chicken">Chicken</string>
    <string name="category_pork">Pork</string>
    <string name="category_beef">Beef</string>
    <string name="category_fish">Fish</string>
    <string name="category_vegan">Vegan</string>
    <string name="category_desert">Desert</string>
    <string name="addItem_button">+</string>
    <string name="sign_in">Sign-in</string>
    <string name="upload_pic">Upload pic</string>
    <string name="button_back">Back</string>
    <string name="button_save">Save</string>
    <string name="hint_name">Name</string>
    <string name="hint_description">Description</string>
    <string name="button_delete">Delete</string>
    <string name="button_details">Details</string>




    <string-array name="categories_array">
        <item>Chicken</item>
        <item>Pork</item>
        <item>Beef</item>
        <item>Fish</item>
        <item>Vegan</item>
        <item>Desert</item>
    </string-array>

</resources>
