<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <SearchView
        android:id="@+id/simpleSearchView"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:iconifiedByDefault="false"
        android:queryHint="Search Here" />

    <Button
        android:id="@+id/button_signin_signout"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="10dp"
        android:text="@string/sign_in" />

    <android.support.v7.widget.GridLayout
        android:layout_width="299dp"
        android:layout_height="282dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="46dp"
        android:layout_marginTop="148dp">

        <Button
            android:id="@+id/category_chicken"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:text="@string/category_chicken" />

        <Button
            android:id="@+id/category_pork"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:text="@string/category_pork"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/category_Beef"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:text="@string/category_beef"
            app:layout_column="2"
            app:layout_row="0" />

        <Button
            android:id="@+id/category_fish"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:text="@string/category_fish"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/category_vegan"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:text="@string/category_vegan"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/category_desert"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:text="@string/category_desert"
            app:layout_column="2"
            app:layout_row="1" />
    </android.support.v7.widget.GridLayout>

    <Button
        android:id="@+id/button_addItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="41dp"
        android:gravity="center_vertical|center"
        android:text="@string/addItem_button" />





</RelativeLayout>